# DMG-2025

./: .gitignore  Cargo.toml  README.md  build.rs  cspell.json  options.json5
src/: cpu.rs  main.rs  options.rs  window.rs
src/cpu/: apu.rs  input.rs  interrupts.rs  io.rs  mbc.rs  memory.rs  opcodes.rs  ppu.rs  readwrite.rs  registers.rs  timer.rs
src/window/: clock.rs  debug.rs  gb-instructions-db.json  input.rs  instructions.rs  logging.rs  menu.rs  saving.rs
