[package]
name = "DMG-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
dirs-next = "2.0.0"
eframe = "0.30.0"
egui = "0.30.0"
env_logger = "0.11.6"
image = "0.25.5"
memmap2 = "0.9.5"
open = "5.3.2"
rfd = "0.15.2"
rodio = "0.20.1"
serde = {version = "1.0.217", features = ["derive"]}
serde-big-array = "0.5.1"
serde_json = "1.0.137"

[build-dependencies]
winresource = "0.1.19"

[package.metadata.winresource]
LegalCopyright = "https://github.com/NuuDel107/DMG-2025"
FileDescription = "DMG-2025 - The worst Game Boy emulator"
